2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/05_unray_float_aff_float.deca
// Description :
//      afféctation d'une Unray Minus devant un float dans un float 
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024

{
    float f = -12.5;
}