2A/05_Projet_GL/src/test/deca/context/invalid/complet/35_aff_float_Object.deca
// Description :
//   afféctation float dans Object 
// Resultats :
//    ligne 10 :le float ne peut pas être affecté à Object
// Historique :
//  cree le 16/01/2024

{
    Object o ;
    o = 1.5 ; 
}